Fixed regression issues with the Search Clipping By Name dialog

--- a/src/chrome/skin/searchClipping.css
+++ b/src/chrome/skin/searchClipping.css
@@ -15,7 +15,7 @@
   font: message-box;
 }
 
-#search-results-listbox scrollbox {
+#search-results-listbox {
   overflow-x: hidden !important;
 }
 
